<resources>
    <string name="app_name">trail5</string>
    <string name="pasch">"The Two-legged forward bend massages and tones the abdominal and pelvic organs, and helps people suffering from diabetes. This yoga posture helps balance the prana in the body and also calms the mind"</string>
    <string name="kapal">"The Skull shining breathing technique helps energize the nervous system and rejuvenates brain cells. It is very helpful for patients suffering from diabetes, as it stimulates abdominal organs. This pranayama also improves the blood circulation and uplifts the mind.The Skull shining breathing technique helps energize the nervous system and rejuvenates brain cells. It is very helpful for patients suffering from diabetes, as it stimulates abdominal organs. This pranayama also improves the blood circulation and uplifts the mind."</string>
    <string name="dhanu">"The Bow pose strengthens regulates the pancreas and is highly recommended for people with diabetes. This yoga pose also strengthens the abdominal muscles and is a good stress and fatigue buster."</string>
    <string name="supta">"The Lying-down body twist massages the internal organs and improves digestion. This posture also exerts pressure on the abdominal organs and is hence very helpful yoga posture for people suffering from diabetes."</string>
    <string name="shishu">"It helps in deeply relaxing and calms the nervous system, reducing stress, and anxiety.This asana is very helpful for students to overcome stress and depression"</string>
    <string name="hal">"calms the nervous system, reducing stress and fatigue stimulates the thyroid gland, helping to improve your mood and energy levels"</string>
    <string name="sava">"Enables a deep and meditative rest, releasing stress, a major cause of depression It helps reduce Vata Dosha – imbalance in the air element, which can cause you to feel depressed and anxious helps rejuvenate and refresh you"</string>
    <string name="adho">Energizes and rejuvenates the body and Increases blood circulation to the brain, helping to boost your mood and Helps relieve headache, insomnia, and fatigue</string>
    <string name="nauka">Nauka asana or boat pose helps reduce fat on your midriff, tones your abdominal muscles and strengthens your back.</string>
    <string name="pawana">Pawanmukt asana is also known as the wind releasing pose. It helps in burning cellulose in your thighs, hips and abdominal region.</string>
    <string name="bhujan">Bhujang asana is also called the cobra pose. It helps in stretching and toning the muscles of your arms, shoulders, buttocks, thighs, back and abdomen.Bhujang asana is the best way to reduce belly fat. It gives a good stretch to your abdominal muscles and helps you attain a flat belly with regular practice.</string>
    <string name="ushtra">Ushtra asana or the camel pose is another pose that is beneficial in reducing fat in your tummy area. It also helps tone your back, chest and shoulder muscles.</string>
    <string name="parvash">This asana is also known as side angle stretch. It helps stretch your muscles and helps improve your body shape. It involves all the muscles in your body. It is especially beneficial for reducing fat on your thighs, hips, pelvic and waist area</string>
    <string name="majar">This pose stretches the spine, back muscles and neck, stimulates blood flow in the wrists and increases the circulation of spinal fluid. Coupled with Cow pose (1b), it is a wonderful warm-up for the spine and, when synchronised with the breath, has a calming effect on the mind.</string>
    <string name="anjaneya">Stretches the chest, hip flexors, quadriceps, sides of the waist and tops of the ankles and feet. Improves balance and mental focus. Great for runners, cyclists or if you spend a lot of the day sitting. </string>
    <string name="vira">Stretches the inner thighs, groin, chest, lungs and shoulders. Strengthens your legs, improves stamina and concentration.Tip: To avoid creating tension in the shoulders, try rotating the palms upwards and then, keep the shoulders soft, slowly return the palms of the hands so they’re facing down.</string>
    <string name="vikra">Improves balance, creates external rotation in the hips, strengthens the ankles, legs and spine, increases focus and concentration and quietens the mind.</string>
    <string name="gomuk">Stretches the ankles, hips and thighs, opens the upper back, chest and shoulders, and works the triceps. If the version in the photo is uncomfortable for your legs or hips try stretching the lower leg out in front of you.</string>
    <string name="triko">Strengthens the legs, back and torso, lengthens the side of the body, stretches the inner thighs, hamstrings, calves, spine, shoulders, chest and hips.</string>
    <string name="nikun">It Stretches Shoulders and upper back.Start in the tabletop position and walk your hands forward till your forehead reaches the ground. Let the spine be neutral but press the hands into the ground. Maintain the hips above the knees. You can also rest your forehead on a pillow or a block. Hold for 5 to 9 breaths.</string>
    <string name="artha">It Strengthens Glutes and hamstrings.Start in a prone position with your arms crossed in front of you. Let your forehead rest on your forearm and point the legs back. Pull the navel in strong and lift one leg off the ground as high as comfortable. Do not tilt the body to one side to lift the leg. Do this slowly without using speed or momentum. Hold for 3 to 5 breaths and switch sides</string>
    <string name="dwipa">It Strengthens Spine and shoulders.Start in a tabletop position and extend your right leg back, lifting it off the ground in line with the hips. Stay here, else if comfortable, raise your left hand out as well, so you are balancing on two limbs. Pull the navel towards the spine so your core is engaged and you are not sinking at the lower back. Hold for 5 to 9 breaths and then switch sides.</string>
    <string name="kopta">It Stretches Glutes, piriformis, lower back. Start in a supine position with knees bent. Lift your right ankle and place it above your left knee. Then bring the left knee to the chest by pulling gently with your hands. If comfortable, use your right elbow to get the right shin parallel to the ground. Hold for 5 to 10 breaths and repeat on the other side. This is an excellent stretch for runners and cyclists.</string>
    <string name="bow">This pose does a great job in working on pain in the joints, back and even prevents menstrual cramps. All you have to do it lie down on your front, reach back and pull your legs with your hand, lifting both upper and lower body, with support from the abdomen. Try holding this position, as it works its magic.</string>
    <string name="sukh">Sit in a normal meditation pose. Hold your left wrist with your right hand behind the back. Continue to inhale while pulling your shoulders back and expanding your chest. While bending forward, exhale and try to touch your right forehead to your right knee. Inhale and return to the starting position. Repeat the steps and continue on the other side by touching your forehead to your left knee.Sukhasana is pivotal in the case of lung anomalies. It stimulates the blood flow to the lungs and also washes out the harmful toxins from the lung muscles.</string>
    <string name="matsya">Lie on your back and fold your arms underneath your body. Lift your head and chest up, breathe in, and then rest the crown of the head on the ground while arching your back. Maintain the balance of your whole body using your elbows. Inhale and exhale deeply opening up the chest. Maintain this position for as long as you are comfortable.Touted as “Destroyer of all diseases”, the Fish pose promotes deep breathing by stretching and strengthening the lung muscles.</string>
    <string name="arthmatsya">Sit straight with your legs stretched out and feet together. Bend your right leg and place the heel of your right foot beside your left hip. Now, take the left leg over your right knee. Place your right hand on your left foot and your left hand behind you. Twist the waist, shoulders, and neck to the left and look over the left side shoulder. Hold the position and continue breathing in and out gently. Slowly come back to the original starting position and repeat in the same manner on the other side.This asana is extremely beneficial in providing relief from breathing difficulties,stress and tension. </string>
    <string name="bhuj">Lie flat on your stomach and place your head on the ground. Keep both your hands on either side of your shoulders. Slowly, put pressure on your palms and lift your body up from the torso while stretching your back and belly muscles. Straighten out your arms and keep your shoulder blades pressed against your back. Fix gaze at a point on the ceiling and hold this posture for about 15-30 seconds and exhale as you return to the starting position.The cobra pose not only improves mental calmness but also strengthens the mind and helps stretch out the chest and lungs.</string>
    <string name="pad">Start with a supported headstand. While you breathe out, fold your legs and cross them to bring your left ankle onto the right thigh and your right ankle onto the left. Support the back with your hands. Hold this position for a few consecutive breaths or as long as you can hold, unfold your legs and slowly lower your body.The inverted Lotus pose helps in the proper expansion of the chest and allows easier passage of the air to the lungs. Twisting the upper side of the body acts as a massage for the internal organs, which in turn helps in better expulsion of toxins from the body.</string>

</resources>
