<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".depressionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="SHISHUASANA"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/shishu" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shishu"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="HALASANA"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/hal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:text="@string/hal"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="SAVASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/savasan" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sava"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="ADHO MUKHA SAVASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/adho" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adho"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />


    </LinearLayout>


</ScrollView>