<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dailyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="MAJARYASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/majaryasan" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/majar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="ANAJANEYASANA"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/lowlunge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:text="@string/anjaneya"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="VIRABHADRASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/daily1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vira"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="VRUKSHASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/tree" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vikra"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />


    </LinearLayout>


</ScrollView>