<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyPainsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="NIKUNJASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/nikusa" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nikun"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="SUPTA KAPOTASANA"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/kapota" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:text="@string/kopta"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="ARDHA SHALABASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/ardha" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artha"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00FFFF"
            android:textSize="35sp"
            android:fontFamily="@font/amarnath_bold"
            android:text="DWIPADA MARJRIASANA" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/dwip" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dwipa"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />


    </LinearLayout>


</ScrollView>